# OrgBoundaryBench

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: defaults.py
notebooks/: 01_lumpable_vs_perturbed_demo.ipynb
outputs/: BASELINES.md  FINDINGS.md  METHODOLOGY.md  METHODOLOGY_RCTI.md  README.md  aaron_activation_audit.md  benchmark_leaderboard.csv  claim_reframing_decision.md  external_agreement_diagnostic.md  external_agreement_table.csv  failure_case_table.csv  failure_diagnosis.md  failure_gallery.md  findings_summary.md  leverage_gate_diagnosis.md  metric_ablation_table.csv  metric_audit.md  model_registry.csv  next_org_mapping_run_plan.md  next_public_run_plan.md  null_audit_summary.md  null_gate_diagnosis.md  org_design_mapping_failure_cases.csv  org_design_mapping_failure_interpretation.md  org_map_objective_ablation.csv  org_map_objective_ablation.md  outlier_audit_summary.md  release_decision_refresh.md  stress_failure_diagnosis.md  stress_perturbation_breakdown.csv  task_level_diff.csv  task_level_diff_report.md  temporal_drift_completion_report.md
schemas/: governance_decision.schema.json  remote_compute_payload.schema.json  remote_compute_result.schema.json  report.schema.json  run.schema.json  task.schema.json
scripts/: build_public_findings.py  build_temporal_windows.py  download_and_normalize.py  export_openclaw_bundle.py  generate_verification_report.py  plot_mvp_figures.py  prepare_remote_compute_payload.py  probe_conjecture_10_1.py  run_aaron_vs_plain_suite.py  run_adversarial_audit.py  run_boundary_benchmark.py  (+45 more)
(+444 files in other folders)
